# trash-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: lint-on-push.yml  release-on-tag.yml  test-on-push.yml
.nvim/: nvim-dap.lua
src/: lib.rs  main.rs
