[package]
name = "trash-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
crossterm = "0.28.1"
libc = "0.2.153"
log = "0.4.21"
rand = "0.8.5"
ratatui = "0.28.1"
urlencoding = "2.1.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lib]
name = "libtrash"
path = "src/lib.rs"

[[bin]]
name = "trash"
path = "src/bin/trash.rs"

[[bin]]
name = "restore"
path = "src/bin/restore.rs"
